test_cases/pass/p23.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (NOT (x > 10))
START IF
    PRINT: "small"
END IF
END SCRIPT
