test_cases/fail/f35.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x > 10)
START IF
    PRINT: "big"
END IF
ELSE IF (x)
START IF
    PRINT: "truthy"
END IF
END SCRIPT
